<resources>
    <string name="app_name">芳草寻源</string>
    <string name="splash_copyright">copyright © 2016-2017 芳草寻源のしみず</string>
    <string name="app_author">さる</string>
    <string name="login_title">登录芳草寻源</string>
    <string name="text_login_username_et__hint">请输入芳草寻源账号名</string>
    <string name="login_changePwd">找回密码</string>
    <string name="register_btn_text">加入芳草寻源</string>
    <string name="login_btn_text">登录</string>
    <string name="no_network_connection">网络傲娇了，请检查网络设置</string>
    <string name="login_username_cannot_null">小源提示:用户名不能为空</string>
    <string name="login_pwd_cannot_null">小源提示:密码不能为空</string>
    <string name="register_title">加入芳草寻源</string>
    <string name="text_register_username_et__hint">请创建芳草寻源用户名</string>
    <string name="text_register_pwd_et__hint">请键入您的密码</string>
    <string name="text_login_pwd_et__hint">请输入密码</string>
    <string name="text_register_email_et__hint">请输入常用电子邮箱</string>
    <string name="register_and_login_btn_text">注册</string>
    <string name="text_register_re_pwd_et__hint">请再输入一次密码</string>
    <string name="register_username_cannot_null">小源提示:用户名不能为空</string>
    <string name="register_pwd_cannot_null">小源提示:密码不能为空</string>
    <string name="register_re_pwd_cannot_null">小源提示:确认密码不能为空</string>
    <string name="register_pwd_not_same">小源提示:两次密码不一致</string>
    <string name="register_email_cannot_null">小源提示:邮箱不能为空</string>
    <string name="email_format_exception">小源提示:邮箱格式不正确哦</string>
    <string name="main_tab_imgInfo">底部tab按钮</string>
    <string name="homeText">首页</string>
    <string name="user_strategy_text">当地</string>
    <string name="personal_setting_text">个人中心</string>
    <string name="user_login_now">立即登录</string>
    <string name="fragment_setting_user_dynamic_state_text">好友动态</string>
    <string name="fragment_setting_user_strategy_text">我の攻略</string>
    <string name="fragment_setting_user_album">旅游相册</string>
    <string name="fragment_setting_nearby">附近</string>
    <string name="fragment_setting_product">我的商品</string>
    <string name="fragment_setting_my_collection_text">我的收藏</string>
    <string name="fragment_setting_user_order_text">我的订单</string>
    <string name="fragment_setting_user_space_text">我的空间</string>
    <string name="fragment_setting_love_postcard_text">爱の明信片</string>
    <string name="fragment_setting_user_my_comment">我的评论</string>
    <string name="fragment_setting_user_settings">设置</string>
    <string name="fragment_setting_user_feedback">意见反馈</string>
    <string name="fragment_setting_personal_info_text">个人信息</string>
    <string name="feed_back_content_text">请在此写下您对我们的宝贵意见，小源会很高兴收到您的反馈</string>
    <string name="feed_back_contact_text">请留下联系方式:QQ或Email</string>
    <string name="feed_back_title">意见反馈</string>
    <string name="feed_back_content_null_text">小源提示:欧尼酱，内容别空着嘛</string>
    <string name="feed_back_contact_null_text">小源提示:欧尼酱，留个联系方式嘛，不然小源找不到你了</string>
    <string name="are_you_sure_quit">确认要退出吗</string>
    <string name="quit_alert_text">小源提醒您</string>
    <string name="quit_confirm_text">退出</string>
    <string name="quit_later_text">再看看</string>
    <string name="my_qr_code_text">我的二维码</string>
    <string name="change_languange_text">语言设置</string>
    <string name="about_author_text">关于作者</string>
    <string name="about_app_text">关于芳草寻源</string>
    <string name="check_update_text">检查更新</string>
    <string name="app_version">V1.0</string>
    <string name="quit_login_text">退出登录</string>
    <string name="user_setting_title_text">设置</string>
    <string name="author_name_text">(清水雅治)しみずまさはる</string>
    <string name="github_text">GitHub:</string>
    <string name="github_url_text">https://github.com/King-Of-Overload</string>
    <string name="sina_wei_blog_text">新浪微博:</string>
    <string name="wei_blog_nickname_text">AlanBingoo</string>
    <string name="send_feed_back_success_text">反馈成功</string>
    <string name="server_down_text">Oh,服务器或网络傲娇了，请稍后再试</string>
    <string name="send_feed_back_fial_text">发送失败，请稍后再试</string>
    <string name="register_success_text">恭喜您，注册成功，请尽快去邮箱激活吧</string>
    <string name="register_error_text">注册失败，请稍后再试</string>
    <string name="login_error_text">登录失败，请检查用户名与密码是否正确</string>
    <string name="login_success_welcome_text">，欢迎回来</string>
    <string name="login_over_time">小源提示：登录信息已经过期，请重新登录</string>
    <string name="illegal_login_text">您的账号在另一处登录,有被盗风险,如不是本人操作,请尽快修改密码或联系客服人员</string>
    <string name="login_quit_success_text">小源提示:退出成功</string>
    <string name="app_name_and_version">芳草寻源 V1.0</string>
    <string name="develop_group_text">企画：進撃のサルたち</string>
    <string name="app_introduce_text" formatted="false">芳草寻源简介</string>
    <string name="open_source_allow_text" formatted="false">开放源代码许可</string>
    <string name="about_app_title_text">关于芳草寻源</string>
    <string name="order_has_payed_text">已付款</string>
    <string name="order_not_payed_text">未付款</string>
    <string name="index_user_strategy_text">游记攻略</string>
    <string name="index_write_strategy_text">轻游记</string>
    <string name="index_destination_text">目的地</string>
    <string name="index_nice_shot_text">美丽瞬间</string>
    <string name="index_trip_equipment_text">旅行装备</string>
    <string name="index_skills_text">行摄技法</string>
    <string name="index_love_card_text">爱の明信片</string>
    <string name="index_my_space_text">我的空间</string>
    <string name="please_login_first_text">小源提示：请先登录</string>
    <string name="loading_now_text">正在加载</string>
    <string name="no_payed_order_text">您没有已付款订单</string>
    <string name="hint_text">小源提示</string>
    <string name="server_exception_text">服务器或网络异常，请稍后再试</string>
    <string name="order_oid_prefix_text">订单号：</string>
    <string name="order_quantity_text">数量：1</string>
    <string name="pay_text">去支付</string>
    <string name="refresh_text">刷新完成</string>
    <string name="no_unpayed_order_text">您没有未付款订单</string>
    <string name="main_user_strategy_text">精彩攻略游记</string>
    <string name="all_user_strategy_text">全部</string>
    <string name="nice_user_no_strategy_text">精品用户</string>
    <string name="good_quantity_strategy_text">优质精华</string>
    <string name="tv_hint_boutique_strategy_text">精品用户</string>
    <string name="hint_high_quality_strategy_text">优质精华</string>
    <string name="icon_font_eye_open">&#xf06e;</string>
    <string name="icon_font_time">&#xf017;</string>
    <string name="dynamicbox_retry">请重试</string>
    <string name="icon_font_thump_up">&#xf087;</string>
    <string name="pay_attention_text">关注</string>
    <string name="menu_item_photo_skill_text">摄影技巧</string>
    <string name="menu_item_houqi_text">后期秘籍</string>
    <string name="menu_item_basic_text">基础入门</string>
    <string name="menu_item_equip_text">玩转器材</string>
    <string name="menu_master_text">大师课堂</string>
    <string name="menu_item_strategy_text">行摄攻略</string>
    <string name="read_text">阅读</string>
    <string name="server_error_text">服务器在开小差，请稍后再试</string>
    <string name="dead_line_text">截止日期：</string>
    <string name="comment_num_text">条留言</string>
    <string name="participate_num_text">人参与</string>
    <string name="home_text">芳草寻源</string>
    <string name="loading_text">小源正在很努力的加载哦……</string>
    <string name="begin_text">开始：</string>
    <string name="end_text">截止：</string>
    <string name="tag_text">标签：</string>
    <string name="advertise_text">发起：</string>
    <string name="send_num_text">预寄：</string>
    <string name="page_text">张</string>
    <string name="confirm_text">已确认</string>
    <string name="person_text">人</string>
    <string name="reply_text">回复</string>
    <string name="no_reply_text">没有评论，还不赶紧把楼主轰炸下来</string>
    <string name="positive_text">确定</string>
    <string name="product_description_text">商品简介：</string>
    <string name="product_detail_text">商品详情：</string>
    <string name="phone_text">电话：</string>
    <string name="fans_text">粉丝</string>
    <string name="usignature_text">简介：</string>
    <string name="search_hint">搜索攻略，相册，up主，轻游记等</string>
    <string name="section_focus">关注</string>
    <string name="fans">粉丝</string>
    <string name="direct_messages">私信</string>
    <string name="add_follow">+关注</string>
    <string name="personal_doc_text">个人资料</string>
    <string name="my_avatar_text">头像</string>
    <string name="nickname_text">昵称</string>
    <string name="sex_text">性别</string>
    <string name="email_text">电子邮箱</string>
    <string name="signature_text">个性签名</string>
    <string name="cell_phone_text">电话</string>
    <string name="city_text">所在城市</string>
    <string name="update_pwd_text">修改密码</string>
    <string name="cancel_text">取消</string>
    <string name="change_avatar_text">更换头像</string>
    <string name="choose_from_phone_text">从手机相册选择</string>
    <string name="take_one_photo_text">拍一张</string>
    <string name="change_sex_text">更改性别</string>
    <string name="male_text">男孩纸</string>
    <string name="female_text">女孩纸</string>
    <string name="keep_secret_text">保密</string>
    <string name="input_new_nickname_text">请输入新昵称</string>
    <string name="change_nick_name_text">修改昵称</string>
    <string name="save_text">保存</string>
    <string name="un_set_text">未设置</string>
    <string name="nickname_empty_text">小源提示：新昵称不能为空哦</string>
    <string name="update_success_text">修改成功</string>
    <string name="change_email_text">修改邮箱</string>
    <string name="input_new_mail_text">请输入新邮箱</string>
    <string name="update_signature_text">修改个性签名</string>
    <string name="input_new_signature_text">请输入个人签名</string>
    <string name="signature_not_empty_text">小源提示：内容不能为空</string>
    <string name="input_old_pwd_text">请输入原密码</string>
    <string name="input_new_pwd_text">请输入新密码</string>
    <string name="input_confirm_pwd_text">请重复密码</string>
    <string name="not_null_text">小源提示：内容不能有非空项哦</string>
    <string name="old_pwd_incorrent_text">小源提示：原密码不正确</string>
    <string name="update_pwd_success_text">小源提示：密码修改成功</string>
    <string name="queding_text">确定</string>
    <string name="upload_image_text">头像修改成功</string>
    <string name="smssdk_receive_msg">秒</string>
    <string name="write_phone_text">请填写手机号码</string>
    <string name="acquire_code_text">获取验证码</string>
    <string name="write_code_text">请填写验证码</string>
    <string name="submit_code_text">提交验证</string>
    <string name="edit_phone_text">修改手机号</string>
    <string name="phone_not_null_text">小源提示：手机号码不能为空</string>
    <string name="phone_incorrect_text">小源提示：手机号码不正确哦</string>
    <string name="send_success_text">发送成功</string>
    <string name="id_text">代号为：</string>
    <string name="validate_twentity_text">请在20分钟内完成验证</string>
    <string name="validate_success_text">小源提示：验证成功</string>
    <string name="validate_error_text">小源提示：验证失败，请检查验证码</string>
    <string name="plese_login_text">请登录</string>
    <string name="after_login_signature_text">登录后显示您的个性签名哦</string>
    <string name="main_page_text">首页</string>
    <string name="history_record_text">历史记录</string>
    <string name="collect_text">收藏</string>
    <string name="input_china_currency_text">请输入人民币金额</string>
    <string name="choose_country_text">选择货币</string>
    <string name="input_foreign_currency_text">外币金额</string>
    <string name="enter_bannggume_title_text">请输入小视频标题</string>
    <string name="enter_bannggume_content_text">请输入小视频简介</string>
    <string name="choose_relevant_tags_text">请选择相关标签:&#160;&#160;&#160;</string>
    <string name="collect_banggume_text">选择视频</string>
    <string name="personal_tags_text">没有合适的标签,自定义吧:</string>
    <string name="menu_banggume_hot_range_text">热度排序</string>
    <string name="menu_banggume_new_range_text">最新投稿</string>
    <string name="menu_banggume_collect_range_text">最多收藏</string>
    <string name="menu_banggume_comment_range_text">最多评论</string>
    <string name="menu_banggume_issense_range_text">精选内容</string>
    <string name="menu_banggume_all_range_text">全部</string>
    <string name="dianping_text">点评</string>
    <string name="share_text">分享</string>
    <string name="wenlu_text">问路卡</string>
</resources>