<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_skill_skill_academy"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_item_photo_skill_text"
        />
    <item
        android:id="@+id/menu_houqimiji_skill_academy"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_item_houqi_text"
        />
    <item
        android:id="@+id/menu_basic_skill_academy"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_item_basic_text"
        />
    <item
        android:id="@+id/menu_equip_skill_academy"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_item_equip_text"
        />
    <item
        android:id="@+id/menu_master_skill_academy"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_master_text"
        />
    <item
        android:id="@+id/menu_strategy_skill_academy"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_item_strategy_text"
        />
</menu>