<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_app"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacground"
    tools:context="zjut.salu.share.activity.AboutAppActivity">

    <include layout="@layout/view_top_bar"/>

    <zjut.salu.share.widget.MyScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_horizontal"
                />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name_and_version"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                />
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/develop_group_text"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                />
            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_copyright"
                android:textSize="14sp"
                android:textColor="@color/text_color"
                />

            <TextView
                android:padding="3dp"
                android:layout_marginTop="1dp"
                android:id="@+id/tv_app_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_introduce_text"
                android:textColor="@color/text_color"
                />
            <ImageView
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/text_hint"
                android:src="@drawable/line_bg_about_app"/>

            <TextView
                android:padding="3dp"
                android:id="@+id/tv_open_source"
                android:textSize="14sp"
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_source_allow_text"
                />

        </LinearLayout>


    </zjut.salu.share.widget.MyScrollView>

</LinearLayout>
