<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_password"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/bacground"
    android:layout_height="match_parent"
    tools:context="zjut.salu.share.activity.UpdatePasswordActivity">
    <include layout="@layout/view_top_bar"/>
    <EditText
        android:id="@+id/et_old_pwd_content"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:maxLines="2"
        android:inputType="textPassword"
        android:textColorHint="@color/text_hint"
        android:hint="@string/input_old_pwd_text"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/et_new_pwd_content"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:maxLines="2"
        android:textColorHint="@color/text_hint"
        android:hint="@string/input_new_pwd_text"
        android:textSize="16sp"
        />
    <EditText
        android:id="@+id/et_confirm_pwd_content"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:inputType="textPassword"
        android:maxLines="2"
        android:textColorHint="@color/text_hint"
        android:hint="@string/input_confirm_pwd_text"
        android:textSize="16sp"
        />

</LinearLayout>
