<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exchange_currency"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/bacground"
    tools:context="zjut.salu.share.activity.ExchangeCurrencyActivity">

    <include layout="@layout/layout_toolbar"/>

    <EditText
        android:id="@+id/et_china_currency"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:maxLines="2"
        android:textColorHint="@color/text_hint"
        android:hint="@string/input_china_currency_text"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_choose_country"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:paddingBottom="8dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="8dp"
            android:text="@string/choose_country_text"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/et_foreign_currency"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:maxLines="2"
            android:layout_marginLeft="8dp"
            android:textColorHint="@color/text_hint"
            android:hint="@string/input_foreign_currency_text"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>
