<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_upload_banggume"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/bacground"
    tools:context="zjut.salu.share.activity.banggumi.UploadBanggumeActivity">

    <include layout="@layout/layout_toolbar"/>
<zjut.salu.share.widget.MyScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_bannggume_title"
        android:layout_marginTop="8dp"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start"
        android:background="@color/md_white_1000"
        android:hint="@string/enter_bannggume_title_text"
        android:textColor="@color/text_hint"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/et_bannggume_content"
        android:layout_marginTop="8dp"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="start"
        android:background="@color/md_white_1000"
        android:hint="@string/enter_bannggume_content_text"
        android:textColor="@color/text_hint"
        android:textSize="14sp"
        />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_relevant_tags_text"
        android:textColor="@color/text_hint"
        />

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/tags_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        app:max_select="-1"
        />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_tags_text"
            android:textColor="@color/text_hint"
            />

        <mabbas007.tagsedittext.TagsEditText
            android:layout_marginTop="4dp"
            android:id="@+id/tagsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            TagsEditText:allowSpaceInTag="true"
            TagsEditText:tagsCloseImageRight="@drawable/tag_close"
            TagsEditText:tagsCloseImageLeft="@drawable/dot"
            TagsEditText:tagsTextColor="@color/md_white_1000"
            TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize"
            TagsEditText:tagsCloseImagePadding="@dimen/defaultTagsCloseImagePadding"/>

        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="6dp"
    >
    <TextView
        android:id="@+id/tv_choose_banggume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_general_margin"
        android:layout_marginRight="@dimen/default_general_margin"
        android:background="@drawable/btn_pin_bg"
        android:gravity="center"
        android:text="@string/collect_banggume_text"
        android:textColor="@color/focus_text_color"
        android:textSize="@dimen/default_small_text_size" />
    <TextView
        android:id="@+id/tv_choose_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="已选择视频文件:  "
        />
    <TextView
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AV1635.flv"
        />
</LinearLayout>


    </LinearLayout>
</zjut.salu.share.widget.MyScrollView>

</LinearLayout>
